Fixed z-index of menu-modal-sidebar

--- a/src/assets/style/cmps/WorkSpaceCmps/_MoreModal.scss
+++ b/src/assets/style/cmps/WorkSpaceCmps/_MoreModal.scss
@@ -11,7 +11,7 @@
   position: absolute;
   background-color: white;
   border-radius: $border-radius-medium;
-  z-index: 300;
+  z-index: 10000;
 
   .ds-tabs-section {
     .tab {
